[gd_scene load_steps=3 format=3 uid="uid://diq5rsixfcxri"]

[ext_resource type="Script" path="res://addons/escoria-core/testing/rtl_screen_offset_testing.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b3hru28v8y36i" path="res://addons/escoria-ui-simplemouse/tooltip/target_tooltip.tscn" id="2"]

[node name="rtl_screen_offset" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -800.0
script = ExtResource("1")
path_to_richtextlabel = NodePath("tooltip")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(40, 40, 40, 976, 1808, 976, 1808, 40, 40, 40)
width = 2.51
texture_mode = 116

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 315.72
offset_top = 269.104
offset_right = 475.72
offset_bottom = 321.104

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clamp distance"

[node name="clamp_distance" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "40"
max_length = 4

[node name="HBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 310.0
offset_top = 340.0
offset_right = 470.0
offset_bottom = 380.0

[node name="foo" type="CheckBox" parent="HBoxContainer2"]
layout_mode = 2
text = "Foo"

[node name="foobar" type="CheckBox" parent="HBoxContainer2"]
layout_mode = 2
text = "Foo bar"

[node name="whatisit" type="CheckBox" parent="HBoxContainer2"]
layout_mode = 2
text = "A super extremely long sentence to test<br>the behaviour of that RichTextLabel node..."

[node name="tooltip" parent="." instance=ExtResource("2")]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = 238.815
offset_top = 131.18
offset_right = 638.815
offset_bottom = 231.18
text = "[center][color=#200606][/color][/center]"

[connection signal="mouse_moved" from="." to="." method="_on_Control_mouse_moved"]
[connection signal="text_selected" from="." to="." method="_on_Control_text_selected"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/clamp_distance" to="." method="_on_clamp_distance_text_changed"]
[connection signal="pressed" from="HBoxContainer2/foo" to="." method="_on_new_text_pressed"]
[connection signal="pressed" from="HBoxContainer2/foobar" to="." method="_on_new_text_pressed"]
[connection signal="pressed" from="HBoxContainer2/whatisit" to="." method="_on_new_text_pressed"]
